--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <p>
                 <button onclick="
-                    updateCalculation()
+                    updateCalculation('(')
                 ">(</button>
 
                 <button onclick="
-                    updateCalculation()
+                    updateCalculation(')')
                 ">)</button>
                 <button onclick="
                     updateCalculation('%')
